cmake_minimum_required(VERSION 3.22.1)
project(console_game_remake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)

file(GLOB TXTS "*.txt")
file(COPY ${TXTS} DESTINATION ${CMAKE_BINARY_DIR})

FILE(GLOB SOURCES "${CMAKE_SOURCE_DIR}/*.cpp")
FILE(GLOB HEAD "${CMAKE_SOURCE_DIR}/*.h")

add_executable(${PROJECT_NAME} ${SOURCES} ${HEAD})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})